# NeuroCore

./: .gitignore  CMakeLists.txt  README.md  commit_message.txt
examples/: demo_main.cu
include/neurocore/core/: elementwise_kernels.cuh  exceptions.h  ndarray.cuh  random.cuh  slices.h  tensor.cuh  type_traits.cuh  utils.h
include/neurocore/functions/: arithmetic.cuh  base.cuh  grad_kernels.cuh  math.cuh  tensor_ops.cuh
include/neurocore/optim/: adam.cuh  optim_kernels.cuh  optimizer.h  rmsprop.cuh  sgd.cuh
src/core/: slices.cu  utils.cu
src/optim/: adam.cu  rmsprop.cu  sgd.cu
